[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
futures-util = "0.3.29"
reqwest ={ version = "0.11.22", features = ["json", "stream"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
test-case = "3.3.1"